--- a/index.html
+++ b/index.html
@@ -2,60 +2,65 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>JS Drum Kit</title>
+  <title>JavaScript Drum Kit</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
 </head>
 <body>
 
+  <h1>JavaScript Drum Kit</h1>
+
 <!-- data-key : keycode.info -->
   <div class="keys">
-    <div data-key="65" class="key">
-      <kbd>A</kbd>
+    <div data-key="7" class="key">
+      <kbd>7</kbd>
       <span class="sound">clap</span>
     </div>
-    <div data-key="83" class="key">
-      <kbd>S</kbd>
+    <div data-key="8" class="key">
+      <kbd>8</kbd>
       <span class="sound">hihat</span>
     </div>
-    <div data-key="68" class="key">
-      <kbd>D</kbd>
+    <div data-key="9" class="key">
+      <kbd>9</kbd>
       <span class="sound">kick</span>
     </div>
-    <div data-key="70" class="key">
-      <kbd>F</kbd>
+    <div data-key="4" class="key">
+      <kbd>4</kbd>
       <span class="sound">openhat</span>
     </div>
-    <div data-key="32" class="key">
-      <kbd>Space</kbd>
+    <div data-key="5" class="key">
+      <kbd>5</kbd>
       <span class="sound">boom</span>
     </div>
-    <div data-key="72" class="key">
-      <kbd>H</kbd>
+    <div data-key="6" class="key">
+      <kbd>6</kbd>
       <span class="sound">ride</span>
     </div>
-    <div data-key="74" class="key">
-      <kbd>J</kbd>
+    <div data-key="1" class="key">
+      <kbd>1</kbd>
       <span class="sound">snare</span>
     </div>
-    <div data-key="75" class="key">
-      <kbd>K</kbd>
+    <div data-key="2" class="key">
+      <kbd>2</kbd>
       <span class="sound">tom</span>
     </div>
-    <div data-key="76" class="key">
-      <kbd>L</kbd>
+    <div data-key="3" class="key">
+      <kbd>3</kbd>
       <span class="sound">tink</span>
     </div>
   </div>
 
-  <audio data-key="65" src="sounds/clap.wav"></audio>
-  <audio data-key="83" src="sounds/hihat.wav"></audio>
-  <audio data-key="68" src="sounds/kick.wav"></audio>
-  <audio data-key="70" src="sounds/openhat.wav"></audio>
-  <audio data-key="32" src="sounds/boom.wav"></audio>
-  <audio data-key="72" src="sounds/ride.wav"></audio>
-  <audio data-key="74" src="sounds/snare.wav"></audio>
-  <audio data-key="75" src="sounds/tom.wav"></audio>
-  <audio data-key="76" src="sounds/tink.wav"></audio>
+  <audio data-key="7" src="sounds/clap.wav"></audio>
+  <audio data-key="8" src="sounds/hihat.wav"></audio>
+  <audio data-key="9" src="sounds/kick.wav"></audio>
+  <audio data-key="4" src="sounds/openhat.wav"></audio>
+  <audio data-key="5" src="sounds/boom.wav"></audio>
+  <audio data-key="6" src="sounds/ride.wav"></audio>
+  <audio data-key="1" src="sounds/snare.wav"></audio>
+  <audio data-key="2" src="sounds/tom.wav"></audio>
+  <audio data-key="3" src="sounds/tink.wav"></audio>
 
 <script src="./script.js"></script>
 </body>
